--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -5716,7 +5716,7 @@
         -webkit-flex: 1 1 100%;
         -ms-flex: 1 1 100%;
         flex: 1 1 100%;
-        padding: 5px 24px 30px;
+        padding: 25px 24px 30px;
         min-width: 100%; }
         body.profile .profile-section .category:before,
         body.profile .profile-section .category:after,
